--- a/data/io.github.lo2dev.Echo.metainfo.xml.in
+++ b/data/io.github.lo2dev.Echo.metainfo.xml.in
@@ -31,9 +31,15 @@
   <url type="donation">https://lo2dev.github.io/support</url>
   <url type="vcs-browser">https://github.com/lo2dev/Echo</url>
 
-  <requires>
+  <recommends>
     <display_length compare="ge">360</display_length>
-  </requires>
+  </recommends>
+
+  <supports>
+    <control>pointing</control>
+    <control>keyboard</control>
+    <control>touch</control>
+  </supports>
 
   <screenshots>
     <screenshot type="default">
@@ -51,7 +57,9 @@
   <releases>
     <release version="1.0" date="2024-06-28">
       <description>
-        Initial release!
+        <p>
+          Initial release!
+        </p>
       </description>
     </release>
   </releases>
