Stat cards for the results page
Makes the response time stats cards instead which is easier to parse and read. Also makes the result icon slightly smaller

--- a/src/meson.build
+++ b/src/meson.build
@@ -7,6 +7,7 @@ blueprints = custom_target('blueprints',
     'gtk/help-overlay.blp',
     'window.blp',
     'results.blp',
+    'results_card.blp',
   ),
   output: '.',
   command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
@@ -42,6 +43,7 @@ echo_sources = [
   'main.py',
   'window.py',
   'results.py',
+  'results_card.py'
 ]
 
 install_data(echo_sources, install_dir: moduledir)
