--- a/data/io.github.lo2dev.Echo.desktop.in
+++ b/data/io.github.lo2dev.Echo.desktop.in
@@ -9,3 +9,5 @@ Type=Application
 Categories=GNOME;GTK;Utility;
 Keywords=ping
 StartupNotify=true
+DBusActivatable=true
+X-GNOME-UsesNotifications=true
