Change homepage link to new website

--- a/data/io.github.lo2dev.Echo.metainfo.xml.in
+++ b/data/io.github.lo2dev.Echo.metainfo.xml.in
@@ -27,7 +27,7 @@
   </branding>
 
   <url type="bugtracker">https://github.com/lo2dev/Echo/issues</url>
-  <url type="homepage">https://github.com/lo2dev/Echo</url>
+  <url type="homepage">https://lo2dev.github.io/portal/echo</url>
   <url type="donation">https://lo2dev.github.io/support</url>
   <url type="vcs-browser">https://github.com/lo2dev/Echo</url>
 
