--- a/data/io.github.lo2dev.Echo.metainfo.xml.in
+++ b/data/io.github.lo2dev.Echo.metainfo.xml.in
@@ -55,6 +55,13 @@
   <content_rating type="oars-1.1" />
 
   <releases>
+    <release version="2.3" date="2025-4-21">
+      <description translate="no">
+        <ul>
+          <li>Fixed network banner showing up incorrectly</li>
+        </ul>
+      </description>
+    </release>
     <release version="2.2" date="2025-4-20">
       <description translate="no">
         <ul>
